--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-html, body {
- 	margin: 0;
-	padding: 0;
+body {
 	background:#d8d8d8;
 }
 
@@ -10,8 +8,11 @@ h1{
 	font-weight: bold;
 }
 
+h6{
+	font-family: "Georgia";
+}
+
 main{
-	display: flex;
 	width: 50%;
 	height: 400px;
 	background-color:#FFFFFF;
@@ -22,6 +23,7 @@ main{
 footer{
 	margin-top: 10px;
 }
+
 .playing{
 	-webkit-animation: rotation 2s infinite linear;
 	animation: rotation 3s infinite linear;
@@ -46,7 +48,16 @@ footer{
 }
 
 .musicplayer{
+	text-align: center;
 	float: left;
-	padding: 50px;
+	padding: 20px;
 }
 
+.progress-bar{
+	height: 8px;
+	background-color: #ECECEC;
+}
+
+.so-far{
+	background-color: #4CD0C0;
+}
