--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 
 h6{
 	font-family: "Georgia";
+	text-align: center;
 }
 
 main{
@@ -21,7 +22,9 @@ main{
 }
 
 footer{
-	margin-top: 10px;
+	clear: both;
+	margin: 0 auto;
+	padding-top: : 50px auto 0;
 }
 
 .playing{
