--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ footer{
 .musicplayer{
 	text-align: center;
 	float: left;
-	padding: 20px;
+	padding: 45px;
 }
 
 .progress-bar{
@@ -64,4 +64,8 @@ footer{
 .so-far{
 	background-color: #4CD0C0;
 	transition: width .1s linear;
+}
+
+.currentSong{
+	font-size: 11px;
 }
